force-app/main/default/objects/blng__CreditNote__c/blng__CreditNote__c.object-meta.xml
<CustomObject>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>