force-app/main/default/objects/blng__CreditNote__c/fields/blng__BillingFinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Credit Note</relationshipLabel>
    <relationshipName>BillingFinancePeriodCreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>