force-app/main/default/objects/blng__CreditNote__c/fields/blng__CreditNoteDate__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNoteDate__c</fullName>
    <label>Credit Note Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>