force-app/main/default/objects/blng__CreditNote__c/fields/blng__RelatedInvoice__c.field-meta.xml
<CustomField>
    <fullName>blng__RelatedInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Invoice</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Draft Invoices would not be available</errorMessage>
        <filterItems>
            <field>blng__Invoice__c.blng__InvoiceStatus__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filterItems>
        <infoMessage>Draft Invoices would not be available</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>InvoiceCreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>