force-app/main/default/objects/blng__CreditNote__c/fields/blng__TaxState__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxState__c</fullName>
    <label>Tax State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>