force-app/main/default/objects/blng__CreditNote__c/fields/blng__TaxStreet2__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStreet2__c</fullName>
    <label>Tax Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>