force-app/main/default/objects/blng__CreditNote__c/fields/blng__TaxZipCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxZipCode__c</fullName>
    <label>Tax Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>