force-app/main/default/objects/blng__CreditNote__c/fields/Credit_Memo_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Reasons__c</fullName>
    <description>Added integration field as per BIZ-47523</description>
    <label>Credit Memo Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Billing Freq change current term only</fullName>
            </value>
            <value>
                <fullName>Billing Pause</fullName>
            </value>
            <value>
                <fullName>Contract terms change</fullName>
            </value>
            <value>
                <fullName>Credit for Superseded</fullName>
            </value>
            <value>
                <fullName>Credit Unbilled Time</fullName>
            </value>
            <value>
                <fullName>Currency Change</fullName>
            </value>
            <value>
                <fullName>Customer cancellation</fullName>
            </value>
            <value>
                <fullName>Early Pay Discount</fullName>
            </value>
            <value>
                <fullName>Intapp cancellation</fullName>
            </value>
            <value>
                <fullName>Intapp concession</fullName>
            </value>
            <value>
                <fullName>Legacy SKUs</fullName>
            </value>
            <value>
                <fullName>One Time Credit</fullName>
            </value>
            <value>
                <fullName>OTD Discount Allocation</fullName>
            </value>
            <value>
                <fullName>Payment Adjustment Split</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Re-Bill Payment term amendment</fullName>
            </value>
            <value>
                <fullName>Re-invoice: error</fullName>
            </value>
            <value>
                <fullName>Re-invoice: rev rec period change</fullName>
            </value>
            <value>
                <fullName>Sales tax adjustment only</fullName>
            </value>
            <value>
                <fullName>SFA Change</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>