force-app/main/default/objects/blng__CreditNote__c/fields/Deal_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Deal_Conversion__c</fullName>
    <description>Added integration field as per BIZ-47523</description>
    <label>Deal Conversion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>