force-app/main/default/objects/blng__CreditNote__c/fields/Includes_Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Includes_Termination_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added integration field as per BIZ-47523</description>
    <label>Includes Termination Clause?</label>
    <type>Checkbox</type>
</CustomField>