force-app/main/default/objects/blng__CreditNote__c/fields/Intapp_Account_Number_With_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Account_Number_With_Subsidiary__c</fullName>
    <description>created for SF-NS integration for BIZ-47358</description>
    <formula>blng__Account__r.IntApp_Account_Number__c  &amp;
IF(TEXT(  Subsidiary__c  ) = &quot;01:200 Integration Appliance (US)&quot;,&quot;&quot;,
IF(TEXT( Subsidiary__c ) = &quot;06:700 Rekoop Limited (UK)&quot;,&quot;:06&quot;,
IF(TEXT(Subsidiary__c ) = &quot;09:750 Rekoop Pty Limited (AUS)&quot;,&quot;:09&quot;,
IF(TEXT(Subsidiary__c ) = &quot;23:Gwabbit&quot;,&quot;:23&quot;,
IF(TEXT(Subsidiary__c ) = &quot;37:Repstor, Inc.&quot;,&quot;:37&quot;,
IF(TEXT(Subsidiary__c ) = &quot;18:DealCloud, Inc.&quot;,&quot;:18&quot;,
IF(TEXT(Subsidiary__c ) = &quot;35:Repstor Limited&quot;,&quot;:35&quot;,
IF(TEXT(Subsidiary__c ) = &quot;05:400 TFG - US&quot;,&quot;:05&quot;,&quot;&quot;)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intapp Account Number With Subsidiary</label>
    <type>Text</type>
</CustomField>