force-app/main/default/objects/blng__CreditNote__c/fields/Multi_Year__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year__c</fullName>
    <description>Added integration field as per BIZ-47523</description>
    <label>Multi-Year</label>
    <length>80</length>
    <type>Text</type>
</CustomField>