force-app/main/default/objects/blng__CreditNote__c/fields/NetSuite_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Transaction_Number__c</fullName>
    <description>Added integration field as per BIZ-47523</description>
    <label>NetSuite Transaction Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>