force-app/main/default/objects/blng__CreditNote__c/fields/NS_Credit_Memo_Reasons__c.field-meta.xml
<CustomField>
    <fullName>NS_Credit_Memo_Reasons__c</fullName>
    <label>NS Credit Memo Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>