force-app/main/default/objects/blng__CreditNote__c/fields/NS_Credit_Note_Doc_Num__c.field-meta.xml
<CustomField>
    <fullName>NS_Credit_Note_Doc_Num__c</fullName>
    <label>NS Credit Note Doc Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>