force-app/main/default/objects/blng__CreditNote__c/fields/NS_Credit_Note_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Credit_Note_Internal_ID__c</fullName>
    <label>NS Credit Note Internal ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>