force-app/main/default/objects/blng__CreditNote__c/fields/NS_Error__c.field-meta.xml
<CustomField>
    <fullName>NS_Error__c</fullName>
    <description>added error field for integration - BIZ-47997</description>
    <label>NS Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>