force-app/main/default/objects/blng__CreditNote__c/fields/NS_Period__c.field-meta.xml
<CustomField>
    <fullName>NS_Period__c</fullName>
    <label>NS Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>