force-app/main/default/objects/blng__CreditNote__c/fields/NS_PO_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_PO_Check_Number__c</fullName>
    <label>NS PO/Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>