force-app/main/default/objects/blng__CreditNote__c/fields/Ramping_Users__c.field-meta.xml
<CustomField>
    <fullName>Ramping_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added integration field as per BIZ-47523</description>
    <label>Ramping Users</label>
    <type>Checkbox</type>
</CustomField>