force-app/main/default/objects/blng__CreditNote__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <label>Sales Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>New license sale</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
                <isActive>false</isActive>
                <label>Amendment</label>
            </value>
            <value>
                <fullName>Intapp Journal Entry</fullName>
                <isActive>false</isActive>
                <label>Intapp Journal Entry</label>
            </value>
            <value>
                <fullName>Marketing Event</fullName>
                <isActive>false</isActive>
                <label>Marketing Event</label>
            </value>
            <value>
                <fullName>New Hardware</fullName>
                <isActive>false</isActive>
                <label>New Hardware</label>
            </value>
            <value>
                <fullName>Renewal-Exception</fullName>
                <isActive>false</isActive>
                <label>Renewal-Exception</label>
            </value>
            <value>
                <fullName>Services Agreement</fullName>
                <isActive>false</isActive>
                <label>Services Agreement</label>
            </value>
            <value>
                <fullName>Services Agreement–T&amp;M</fullName>
                <isActive>false</isActive>
                <label>Services Agreement–T&amp;M</label>
            </value>
            <value>
                <fullName>Usage</fullName>
                <isActive>false</isActive>
                <label>Usage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>