force-app/main/default/objects/blng__CreditNote__c/fields/Termination_with_Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Termination_with_Cancellation_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination with Cancellation Fee</label>
    <type>Checkbox</type>
</CustomField>