force-app/main/default/objects/blng__CreditNote__c/validationRules/Approve_Credit_Note_Before_Posting.validationRule-meta.xml
<ValidationRule>
    <fullName>Approve_Credit_Note_Before_Posting</fullName>
    <active>false</active>
    <description>BIZ-45181</description>
    <errorConditionFormula>TEXT(blng__Status__c)=&quot;Posted&quot; &amp;&amp;
(
NOT(TEXT(blng__CreditNoteSourceAction__c)=&quot;Cancel &amp; Rebill&quot;) || NOT(TEXT(blng__CreditNoteSourceAction__c)=&quot;Negative Lines Conversion&quot;)
)
&amp;&amp; NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;))</errorConditionFormula>
    <errorDisplayField>blng__Account__c</errorDisplayField>
    <errorMessage>Please submit this Credit Note for approval</errorMessage>
</ValidationRule>